# pokefirered-coop

./: .claudeignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  FEEDBACK.md  MASTER_PLAN.md  Makefile  PLAYING.md  PROGRESS.md  PROJECT_PLAN.md  README.md  TESTING.md  autopilot.yaml  extract_symbols.py  server.ts
.automation/: run-session.sh
.automation/backups/: CLAUDE.md.bak  PROGRESS.md.bak
.github/workflows/: release.yml  test.yml
data/: script_cmd_table.inc  specials.inc
docs/: app-testing.md  asset-manifest.json  boss-scripts.md  cookbook.md  decisions.md  encounter-system.md  flag-sync.md  link-system.md  object-events.md  packet-protocol.md  relay-testing.md  testing-link.md
include/: multiplayer.h
relay-server/: PLAYING.md  package-lock.json  package.json  partykit.json  tsconfig.json
src/: battle_main.c  event_data.c  main.c  multiplayer.c  overworld.c  scrcmd.c  script.c  starter_choose.c  wild_encounter.c
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: commands.rs  emulator.rs  lib.rs  mgba_wrapper.c  mgba_wrapper.h  net.rs  serial_bridge.rs  session.rs
test/: Makefile  stubs.c  test_dispatch.c  test_packets  test_packets.c  test_runner.h  test_send_throttle.c  test_smoke  test_smoke.c  test_starter.c
test/mocks/: item.h  (+4 more)
tools/: build_save_states.lua  extract_symbols.py  gen-icons.py  mgba_cmake_diag.cmake  run_lua_tests.sh
(+60 files in other folders)
