[package]
name = "pokefirered-coop"
version = "0.1.0"
description = "Pokémon FireRed Co-Op multiplayer wrapper"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
mgba = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"
bindgen = "0.72"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"

